# tmux-sessionizer

./: ASYNC_PERFORMANCE.md  Cargo.toml  GITHUB_PROFILE_FEATURE.md  GITHUB_PROFILE_FIXES.md  IMPLEMENTATION_SUMMARY.md  NIX_BENCHMARK_FIXES.md  NIX_BUILD_FIXES.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  STREAMING_IMPLEMENTATION.md  TRACE_LOGGING_FIXES.md  config_recommendations.toml  example_github_config.toml  flake.nix
src/: cli.rs  configs.rs  dirty_paths.rs  error.rs  github.rs  keymap.rs  lib.rs  local_cache.rs  main.rs  marks.rs  perf_json.rs  repos.rs  session.rs  state.rs  tmux.rs
src/picker/: mod.rs  preview.rs
tests/: async_scanning.rs  cli.rs  duplicate_search_dirs_fix.rs  perf_json_benchmark.rs  performance_benchmark.rs  real_world_benchmark.rs  test_real_repos.rs
