[package]
name = "tmux-sessionizer"
version = "0.5.0"
authors = ["Jared Moulton <jaredmoulton3@gmail.com>"]
edition = "2021"
license = "MIT"
description = """
Tmux Sessionizer is a cli tool to fuzzy find all git repositories in a list of
specified folders and open them as a new tmux session. Also, for git worktrees,
this tool opens all checked out worktrees as new windows.
"""
homepage = "https://github.com/jrmoulton/tmux-sessionizer"
repository = "https://github.com/jrmoulton/tmux-sessionizer"
exclude = ["images/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aho-corasick = "1.1"
clap = { version = "4.5", features = ["cargo", "derive"] }
clap_complete = { version = "4.5", features = [ "unstable-dynamic" ] }
config = { version = "0.15", default-features = false, features = ["toml"] }
crossterm = "0.29"
dirs = "6.0"
error-stack = "0.6"
futures = "0.3"
gix = { version = "0.74", features = ["attributes"] }
jj-lib = "0.34"
nucleo = "0.5"
num_cpus = "1.16"
ratatui = { version = "0.29", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shell-words = "1.1"
shellexpand = "3.1"
simd-json = "0.17"
thiserror = "2"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"

[lib]
name = "tms"
path = "src/lib.rs"

[[bin]]
name = "tms"
path = "src/main.rs"

[dev-dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
once_cell = "1.20"
predicates = "3.1"
pretty_assertions = "1.4"
tempfile = "3.16"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
codegen-units = 1

